[package]
name = "HelixWave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.4.2"
reqwest = { version = "0.11.20", features = ["json"] }
thiserror = "1.0.48"
url = "2.4.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.188"
